# LIS2DH12

./: CMakeLists.txt  README.md  sdkconfig
components/lis2dh12/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  lis2dh12.c
components/lis2dh12/include/: lis2dh12.h
main/: i2c_simple_main.c
